--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   build:
 
+    env:
+      # https://github.com/actions/runner-images/tree/main/images/macos
+      DEVELOPER_DIR: /Applications/Xcode_15.0.1.app/Contents/Developer
+      
     runs-on: macos-latest
 
     steps:
