--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
-# This workflow will build a Swift project
+# This workflow will build a Swift project on macOS
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Swift
+name: macos-build
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       # https://github.com/actions/runner-images/tree/main/images/macos
       DEVELOPER_DIR: /Applications/Xcode_15.0.1.app/Contents/Developer
       
-    runs-on: macos-latest
+    runs-on: macos-13-arm64
 
     steps:
     - uses: actions/checkout@v3
