--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Swift project on macOS
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: macos-build
+name: swift-openapi-lambda-build
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-macos:
 
     env:
       # https://github.com/actions/runner-images/tree/main/images/macos
@@ -24,3 +24,15 @@ jobs:
       run: swift build -v
     - name: Run tests
       run: swift test -v
+
+  build-linux:
+
+    runs-on: ubuntu-22.04
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: swift build -v
+    - name: Run tests
+      run: swift test -v
+      
