--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,8 @@ jobs:
       # https://github.com/actions/runner-images/tree/main/images/macos
       DEVELOPER_DIR: /Applications/Xcode_15.0.1.app/Contents/Developer
       
-    runs-on: macos-13-arm64
+    # runs-on: macos-13-arm64
+    runs-on: macos-13
 
     steps:
     - uses: actions/checkout@v3
