--- a/docker/docker-compose.2204.510.yaml
+++ b/docker/docker-compose.2204.510.yaml
@@ -5,10 +5,14 @@ services:
     image: &image swift-openapi-lambda:22.04-5.10
     build:
       args:
-        base_image: "swiftlang/swift:nightly-5.10-jammy"
+        ubuntu_version: "jammy"
+        swift_version: "5.10"
 
   test:
     image: *image
 
   shell:
+    image: *image
+
+  soundness:
     image: *image
