--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -13,7 +13,8 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
-      license_header_check_project_name: "Swift OpenAPI Lambda"
+      # do not use SwiftLang's license header check because the copyright for this project is Amazon.com + contributors
+      license_header_check_enabled: false
       shell_check_enabled: false
       python_lint_check_enabled: false
       api_breakage_check_container_image: "swift:6.0-noble"
