--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,8 +25,10 @@ jobs:
   license:
     name: License headers check
     needs: soundness
-    run: |
-      ./scripts/check_license_headers.sh
+    steps:
+    - name: "License headers check"
+      run: |
+        ./scripts/check_license_headers.sh
 
   unit-tests:
     name: Unit tests
