--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -47,8 +47,12 @@ jobs:
     with:
       linux_5_9_enabled: false
       linux_5_10_enabled: true
-      linux_nightly_6_0_arguments_override: "--explicit-target-dependency-import-check error"
-      linux_nightly_main_arguments_override: "--explicit-target-dependency-import-check error"
+      linux_6_0_enabled: true
+      linux_nightly_6_0_enabled: true
+      linux_nightly_main_enabled: true
+      linux_6_0_arguments_override: "--enable-experimental-swift-testing"
+      linux_nightly_6_0_arguments_override: "--enable-experimental-swift-testing --explicit-target-dependency-import-check error"
+      linux_nightly_main_arguments_override: "--enable-experimental-swift-testing --explicit-target-dependency-import-check error"
 
   swift-6-language-mode:
     name: Swift 6 Language Mode
