--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -13,33 +13,13 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
-      # do not use SwiftLang's license header check because the copyright for this project is Amazon.com + contributors
-      license_header_check_enabled: false
+      license_header_check_enabled: true
       license_header_check_project_name: "Swift OpenAPI Lambda"
       shell_check_enabled: false
       python_lint_check_enabled: false
       api_breakage_check_container_image: "swift:6.0-noble"
       docs_check_container_image: "swift:6.0-noble"
       format_check_container_image: "swiftlang/swift:nightly-6.0-jammy"
-
-  license:
-    name: License headers check
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-      - name: Mark the workspace as safe
-        # https://github.com/actions/checkout/issues/766
-        run: git config --global --add safe.directory ${GITHUB_WORKSPACE}
-      - name: License headers check
-        env:
-          PROJECT_NAME: "Swift OpenAPI Lambda"
-        run: |
-          ./scripts/check-license-headers.sh
 
   unit-tests:
     name: Unit tests
