--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,6 +20,7 @@ jobs:
       api_breakage_check_container_image: "swift:6.0-noble"
       docs_check_container_image: "swift:6.0-noble"
       format_check_container_image: "swiftlang/swift:nightly-6.0-jammy"
+      yamllint_check_enabled: false
 
   unit-tests:
     name: Unit tests
@@ -37,3 +38,15 @@ jobs:
   swift-6-language-mode:
     name: Swift 6 Language Mode
     uses: apple/swift-nio/.github/workflows/swift_6_language_mode.yml@main
+
+  semver-label-check:
+    name: Semantic Version label check
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - name: Check for Semantic Version label
+        uses: apple/swift-nio/.github/actions/pull_request_semver_label_checker@main
