--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,14 +26,15 @@ jobs:
     name: Unit tests
     uses: apple/swift-nio/.github/workflows/unit_tests.yml@main
     with:
-      linux_5_9_enabled: false
-      linux_5_10_enabled: true
+      linux_5_10_enabled: false
       linux_6_0_enabled: true
-      linux_nightly_6_0_enabled: true
+      linux_6_1_enabled: true
       linux_nightly_main_enabled: true
-      linux_6_0_arguments_override: "--enable-experimental-swift-testing"
-      linux_nightly_6_0_arguments_override: "--enable-experimental-swift-testing --explicit-target-dependency-import-check error"
-      linux_nightly_main_arguments_override: "--enable-experimental-swift-testing --explicit-target-dependency-import-check error"
+      linux_nightly_next_enabled: true
+      linux_nightly_6_0_arguments_override: "--explicit-target-dependency-import-check error"
+      linux_nightly_6_1_arguments_override: "--explicit-target-dependency-import-check error"
+      linux_nightly_main_arguments_override: "--explicit-target-dependency-import-check error"
+      linux_nightly_next_arguments_override: "--explicit-target-dependency-import-check error"
 
   swift-6-language-mode:
     name: Swift 6 Language Mode
@@ -45,7 +46,7 @@ jobs:
     timeout-minutes: 1
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           persist-credentials: false
       - name: Check for Semantic Version label
