Update library to support Swift Lambda runtime v2

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
-/.aws-sam/
-/.build
-/.swiftpm
+.aws-sam/
+.build
+.index-build
+.swiftpm
 samconfig.toml
 Package.resolved
 /*.xcodeproj
@@ -10,4 +11,3 @@ DerivedData/
 .swiftpm/config/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 *key
-
