--- a/Examples/quoteapi/template.yml
+++ b/Examples/quoteapi/template.yml
@@ -8,12 +8,12 @@ Globals:
     CodeUri: .
     Handler: swift.bootstrap
     Runtime: provided.al2
-    MemorySize: 512
+    MemorySize: 128
     Architectures:
       - arm64
 
 Resources:
-  # Lambda function
+  # QuoteService Lambda function
   QuoteService:
     Type: AWS::Serverless::Function
     Properties:
@@ -32,12 +32,25 @@ Resources:
             ApiId: !Ref MyProtectedApi
             Path: /{proxy+}
             Method: ANY
-            Auth:
-              Authorizer: MyLambdaAuthorizer
 
     Metadata:
       BuildMethod: makefile
 
+  # Lambda authorizer function
+  LambdaAuthorizer:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 29  # max 29 seconds for Lambda authorizers
+      Environment:
+        Variables:
+          # by default, AWS Lambda runtime produces no log
+          # use `LOG_LEVEL: debug` for for lifecycle and event handling information
+          # use `LOG_LEVEL: trace` for detailed input event information
+          LOG_LEVEL: trace
+    Metadata:
+      BuildMethod: makefile
+
+  # The API Gateway
   MyProtectedApi:
     Type: AWS::Serverless::HttpApi
     Properties:
@@ -45,17 +58,24 @@ Resources:
         DefaultAuthorizer: MyLambdaAuthorizer
         Authorizers:
           MyLambdaAuthorizer:
-            AuthorizerPayloadFormatVersion: 2.0
-            EnableFunctionDefaultPermissions: true
-            EnableSimpleResponses: true
-            FunctionArn: arn:aws:lambda:us-east-1:486652066693:function:LambdaAuthorizer-LambdaAuthorizer-TSH4AsHiqICi
+            FunctionArn: !GetAtt LambdaAuthorizer.Arn
             Identity:
               Headers:
-                - Authorization 
+                - Authorization
+            AuthorizerPayloadFormatVersion: "2.0"
+            EnableSimpleResponses: true
+
+  # Give the API Gateway permissions to invoke the Lambda authorizer
+  AuthorizerPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref LambdaAuthorizer
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyProtectedApi}/*
 
 # print API endpoint
 Outputs:
   SwiftAPIEndpoint:
     Description: "API Gateway endpoint URL for your application"
     Value: !Sub "https://${MyProtectedApi}.execute-api.${AWS::Region}.amazonaws.com"
-    # Value: !Sub "https://${ServerlessHttpApi}.execute-api.${AWS::Region}.amazonaws.com"
