--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,9 +18,9 @@ jobs:
       license_header_check_project_name: "Swift OpenAPI Lambda"
       shell_check_enabled: false
       python_lint_check_enabled: false
-      api_breakage_check_container_image: "swift:6.0-noble"
-      docs_check_container_image: "swift:6.0-noble"
-      format_check_container_image: "swiftlang/swift:nightly-6.0-jammy"
+      api_breakage_check_container_image: "swift:6.2-noble"
+      docs_check_container_image: "swift:6.2-noble"
+      format_check_container_image: "swiftlang/swift:nightly-6.2-noble"
       yamllint_check_enabled: false
 
   unit-tests:
@@ -30,10 +30,9 @@ jobs:
       linux_5_10_enabled: false
       linux_6_0_enabled: true
       linux_6_1_enabled: true
+      linux_6_2_enabled: true
       linux_nightly_main_enabled: true
       linux_nightly_next_enabled: true
-      linux_nightly_6_0_arguments_override: "--explicit-target-dependency-import-check error"
-      linux_nightly_6_1_arguments_override: "--explicit-target-dependency-import-check error"
       linux_nightly_main_arguments_override: "--explicit-target-dependency-import-check error"
       linux_nightly_next_arguments_override: "--explicit-target-dependency-import-check error"
 
